# hybird

./: .gitignore  README.md
hybrid/story-runtime/: .gitignore  ACCEPTANCE.md  BASELINE_PERFORMANCE.md  KNOWN_DIFFERENCES.md  LICENSE-NOTICE.md  README.md  UPSTREAM_PROVENANCE.yml  pyproject.toml  story-runtime.spec
hybrid/story-runtime/fixtures/: lighthouse-project.json
hybrid/story-runtime/scripts/: benchmark.py  generate_phase7_fixtures.py  generate_synthetic_corpus.py  phase6_e2e_seed.py  soak.py  start-runtime.cmd  start-runtime.ps1  start-runtime.sh
hybrid/story-runtime/src/story_runtime/: __init__.py  __main__.py  api.py  chapter_commits.py  chapter_reads.py  cli.py  config.py  contracts.py  database.py  errors.py  migration_jobs.py  migrations.py  observability.py  operations.py  outbox.py  repository.py  reviews.py  revision_compatibility.py  revision_manifests.py  runtime_logging.py  services.py
hybrid/story-runtime/tests/: conftest.py
hybrid/story-runtime/tests/contract/: test_approved_contract.py  test_canonical_import_contract.py  test_rc2b1d_architecture_gate.py  test_review_artifact_contract.py
hybrid/story-runtime/tests/integration/: test_api.py  test_cli.py  test_phase4_e2e.py  test_phase4_failure_matrix.py  test_phase5_e2e.py  test_phase6_observability.py  test_phase7_migration.py  test_phase8_authority.py  test_phase9_stability.py  test_restart_and_lock.py
hybrid/story-runtime/tests/migration/: test_migrations.py  test_phase7_fixture_catalog.py  test_rc2b1d_legacy_first_write.py
hybrid/story-runtime/tests/unit/: test_chapter_commits.py  (+9 more)
(+467 files in other folders)
