[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hybrid-story-runtime"
version = "0.1.0"
description = "Local authoritative story-state runtime for the Hybrid Story System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "pytest>=8,<10",
  "PyYAML>=6,<7",
]
package = [
  "pyinstaller>=6.10,<7",
]

[project.scripts]
story-runtime = "story_runtime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/story_runtime"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "contract: approved API contract tests",
  "integration: HTTP and persistence integration tests",
  "migration: migration smoke tests",
]
